apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: cnpg-system
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      name: http
