apps/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: cnpg-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pgadmin.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  name: http
